--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ permalink: /about/
             </div>
             <hr />
             <div class="wrap1">
-                    <p>lalalalalalaalalalallalalalal</p>
+                    <p>正在努力当中........</p>
             </div>
             <div class="wrap1">
                 <div class="box">
